; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_keyboard.c_k_fn.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_keyboard.c_k_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kbd_data = type { i64*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kbd_data*, i8)* @k_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @k_fn(%struct.kbd_data* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.kbd_data*, align 8
  %4 = alloca i8, align 1
  store %struct.kbd_data* %0, %struct.kbd_data** %3, align 8
  store i8 %1, i8* %4, align 1
  %5 = load %struct.kbd_data*, %struct.kbd_data** %3, align 8
  %6 = getelementptr inbounds %struct.kbd_data, %struct.kbd_data* %5, i32 0, i32 0
  %7 = load i64*, i64** %6, align 8
  %8 = load i8, i8* %4, align 1
  %9 = zext i8 %8 to i64
  %10 = getelementptr inbounds i64, i64* %7, i64 %9
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %25

13:                                               ; preds = %2
  %14 = load %struct.kbd_data*, %struct.kbd_data** %3, align 8
  %15 = getelementptr inbounds %struct.kbd_data, %struct.kbd_data* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.kbd_data*, %struct.kbd_data** %3, align 8
  %18 = getelementptr inbounds %struct.kbd_data, %struct.kbd_data* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  %20 = load i8, i8* %4, align 1
  %21 = zext i8 %20 to i64
  %22 = getelementptr inbounds i64, i64* %19, i64 %21
  %23 = load i64, i64* %22, align 8
  %24 = call i32 @kbd_puts_queue(i32 %16, i64 %23)
  br label %25

25:                                               ; preds = %13, %2
  ret void
}

declare dso_local i32 @kbd_puts_queue(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
